--- a/styles/style.css
+++ b/styles/style.css
@@ -173,9 +173,6 @@ button {
   background-position: bottom;
   background-size: contain;
 }
-.hero-section-one img {
-  max-width: 600px;
-}
 @media screen and (max-width: 949px) {
   .hero-section-one {
     background-color: hsl(217deg, 28%, 15%);
@@ -223,9 +220,6 @@ button {
     max-width: 1100px;
     margin-inline: auto;
   }
-}
-.stay-productive img {
-  max-width: 500px;
 }
 .stay-productive h2 {
   padding-bottom: 20px;
